[tool.poetry]
name = "tiny-tempo"
version = "0.1.0"
description = ""
authors = ["Bhanwar <bhanwar.bps89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
librosa = "^0.10.2.post1"
pip = "^24.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

